<resources>
    <string name="app_name">Schedule App</string>
    <string name="add_employee_button">Add Employee</string>
    <string name="home_button">Home</string>
    <string name="first_name_message">First Name</string>
    <string name="last_name_message">Last Name</string>
    <string name="phone_message">Phone</string>
    <string name="email_message">Email</string>
    <string name="view_employees_message">View Employees</string>
    <string name="enter_employee_info_message">Enter Employee\'s Information</string>
    <string name="remove_employee">Remove Employee</string>
    <string name="save_employee_button">Save Employee</string>
    <string name="open_message">Open</string>
    <string name="close_message">Close</string>
    <string name="start_message">Start</string>
    <string name="end_message">End</string>
    <string name="mon_message">Mon</string>
    <string name="tue_message">Tue</string>
    <string name="wed_message">Wed</string>
    <string name="thu_message">Thu</string>
    <string name="fri_message">Fri</string>
    <string name="sat_message">Sat</string>
    <string name="sun_message">Sun</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="spinner_mon"> Monday Spinner</string>
    <string name="spinner_tue"> Tuesday Spinner</string>
    <string name="spinner_wed"> Wednesday Spinner</string>
    <string name="spinner_thu"> Thursday Spinner</string>
    <string name="spinner_fri"> Friday Spinner</string>
    <string name="spinner_sat"> Saturday Spinner</string>
    <string name="spinner_sun"> Sunday Spinner</string>
    <string name="availability_scroll_view"> Availability Scroll View</string>

    <string-array name="availabilities">
        <item>Unavailable</item>
        <item>Morning</item>
        <item>Afternoon</item>
        <item>Morning/Afternoon</item>
    </string-array>

    <string name="title_activity_employee_info">EmployeeInfoActivity</string>
    <string name="employee_1">Employee 1</string>
    <string name="employee_2">Employee 2</string>
    <string name="emp1">emp1</string>
    <string name="emp2">emp2</string>
    <string name="add">Add</string>
</resources>