<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UI.EditEmployeeActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/editTextFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/first_name_message"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/editTextLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/last_name_message"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextFirstName"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <EditText
            android:id="@+id/editTextPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/phone_message"
            android:inputType="phone"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextLastName"
            tools:ignore="DuplicateSpeakableTextCheck" />

        <EditText
            android:id="@+id/editTextEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:autofillHints=""
            android:ems="10"
            android:hint="@string/email_message"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:textColorHint="#757575"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextPhone"
            tools:ignore="DuplicateSpeakableTextCheck" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchOpen"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:minHeight="48dp"
                android:text="@string/open_message"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />

            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switchCLose"
                android:layout_width="105dp"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:text="@string/close_message"
                app:layout_constraintStart_toEndOf="@+id/switchOpen"
                app:layout_constraintTop_toBottomOf="@+id/editTextEmail" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:contentDescription="@string/availability_scroll_view"
                android:fillViewport="true"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/switchCLose">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textViewMon"
                            android:layout_width="57dp"
                            android:layout_height="48dp"
                            android:text="@string/mon_message"
                            android:textAlignment="textStart"
                            android:textSize="20sp" />

                        <Spinner
                            android:id="@+id/spinnerMon"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:contentDescription="@string/spinner_mon"
                            android:spinnerMode="dropdown" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textViewTue"
                            android:layout_width="57dp"
                            android:layout_height="48dp"
                            android:text="@string/tue_message"
                            android:textAlignment="textStart"
                            android:textSize="20sp" />

                        <Spinner
                            android:id="@+id/spinnerTue"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:contentDescription="@string/spinner_tue"
                            android:spinnerMode="dropdown" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textViewWed"
                            android:layout_width="57dp"
                            android:layout_height="48dp"
                            android:text="@string/wed_message"
                            android:textAlignment="textStart"
                            android:textSize="20sp" />

                        <Spinner
                            android:id="@+id/spinnerWed"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:contentDescription="@string/spinner_wed"
                            android:spinnerMode="dropdown" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textViewThu"
                            android:layout_width="57dp"
                            android:layout_height="48dp"
                            android:text="@string/thu_message"
                            android:textAlignment="textStart"
                            android:textSize="20sp" />

                        <Spinner
                            android:id="@+id/spinnerThu"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:contentDescription="@string/spinner_thu"
                            android:spinnerMode="dropdown" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textViewFri"
                            android:layout_width="57dp"
                            android:layout_height="48dp"
                            android:text="@string/fri_message"
                            android:textAlignment="textStart"
                            android:textSize="20sp" />

                        <Spinner
                            android:id="@+id/spinnerFri"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:contentDescription="@string/spinner_fri"
                            android:spinnerMode="dropdown" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textViewSat"
                            android:layout_width="57dp"
                            android:layout_height="48dp"
                            android:text="@string/sat_message"
                            android:textAlignment="textStart"
                            android:textSize="20sp" />

                        <Spinner
                            android:id="@+id/spinnerSat"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:contentDescription="@string/spinner_sat"
                            android:spinnerMode="dropdown" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/textViewSun"
                            android:layout_width="57dp"
                            android:layout_height="48dp"
                            android:text="@string/sun_message"
                            android:textAlignment="textStart"
                            android:textSize="20sp" />

                        <Spinner
                            android:id="@+id/spinnerSun"
                            android:layout_width="match_parent"
                            android:layout_height="48dp"
                            android:contentDescription="@string/spinner_sun"
                            android:spinnerMode="dropdown" />

                    </LinearLayout>

                </LinearLayout>

            </androidx.core.widget.NestedScrollView>

        </LinearLayout>

    </LinearLayout>

    <ImageButton
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/save_employee_button"
        android:minHeight="48dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/save_icon" />

</androidx.constraintlayout.widget.ConstraintLayout>